# fileaxa-batch

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml
scripts/: build_template_db.py
src/fileaxa_batch/: __main__.py  app.py  secrets.py
src/fileaxa_batch/api/: client.py  errors.py
src/fileaxa_batch/core/: cleanup.py  dedup.py  models.py  queue_store.py  settings.py  urls.py
src/fileaxa_batch/data/: queue_template.db
src/fileaxa_batch/gui/: main_window.py  queue_model.py  settings_dialog.py  sidebar.py  widgets.py
src/fileaxa_batch/worker/: browser.py  signals.py  worker.py
tests/: test_api_client.py  test_cleanup.py  test_dedup.py  test_job_claimer.py  test_queue_model.py  test_queue_store.py  test_settings.py  test_urls.py
