[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fileaxa-batch"
version = "0.1.0"
description = "PyQt6 batch downloader for Fileaxa free-tier URLs (Playwright-driven)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "slowres" }]
dependencies = [
    "PyQt6>=6.6",
    "playwright>=1.40",
    "httpx>=0.27",
    "keyring>=24",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
fileaxa-batch = "fileaxa_batch.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
